2002-06-12  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed autoscale() not to translate image out of
	  window. Happened after fix for negative coordinates. Should
	  translate image to center of window.
	* src/draw.c: Moved setting off err_gc outside loop so it's always 
	  done, even if you don't need it.

2002-06-12  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (draw_zoom_outline): Fix division by zero when
	  drawing a zoom box with no delta y. Closes bug 567166.

2002-06-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_file.c: Changed ENODATA to EIO, which is more portable.
	  Closes bug 567179.
	* src/gerbv.c: It is now possible to draw images with negative
	  coordinates. Closes bug 548094.
	* src/draw.[hc],src/draw-amacro.[hc], src/Makefile.am: Split out 
	  aperture macro stuff from draw.c to a separate file, draw_amacro.c.
	* src/draw_amacro.c: Fixed bug when drawing primitive 4 causing
	  rotation to be wrong. Thanks to Jonas (you know who you are) for 
	  the excellent files.
	* src/draw_amacro.c: Changed interpretation of "closed shape" in
	  primitive 4. If first point is the same as the last point it's
	  a closed shape, ie filled according to my interpretation. Don't
	  know if it's a correct interpretation.

2002-06-10  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Centered outline zoom uses shift instead of control,
	  use shift before clicking with button three to initiate centered
	  outline zoom (rm:ed switching between centered and plain outline).
	  Changed distance output format to add more digits.

2002-06-09  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Fix actual zoomed area for centered outline zooming.

2002-06-09  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Set cross hair cursor as soon as shift key is
	  pressed (in normal mode, i.e. not zoom outline). Added centered
	  zoom outline mode (closes Feature Request 553452).

2002-06-09  Anders Eriksson  <anders@umunet.org>
